force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/BLN_RemedyFailureCodeMapping__mdt.object-meta.xml
<CustomObject>
    <label>Remedy Failure Code Mapping</label>
    <pluralLabel>Remedy Failure Code Mappings</pluralLabel>
</CustomObject>