force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/fields/BLN_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>BLN_Code_Id__c</fullName>
    <label>Code Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>