force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/fields/BLN_CodeId__c.field-meta.xml
<CustomField>
    <fullName>BLN_CodeId__c</fullName>
    <label>Code Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>