force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/fields/BLN_Remedy_Reason__c.field-meta.xml
<CustomField>
    <fullName>BLN_Remedy_Reason__c</fullName>
    <label>Remedy Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>