force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/fields/BLN_SFS_Reason_Level_1__c.field-meta.xml
<CustomField>
    <fullName>BLN_SFS_Reason_Level_1__c</fullName>
    <label>SFS Reason Level 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>