force-app/main/default/objects/BLN_RemedyFailureCodeMapping__mdt/fields/BLN_SFS_Reason_Level_2__c.field-meta.xml
<CustomField>
    <fullName>BLN_SFS_Reason_Level_2__c</fullName>
    <label>SFS Reason Level 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>